// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`#cogs/cogs/text/field <Field /> With additional props Default value is a string matches the snapshot 1`] = `
<input
  className="MOCK CLASSNAME"
  defaultValue="MOCK DEFAULT VALUE"
  disabled={true}
  id="MOCK ID"
  name="MOCK NAME"
  onChange={[Function]}
  placeholder="MOCK PLACEHOLDER"
  readOnly={true}
  required={true}
  type="text"
/>
`;

exports[`#cogs/cogs/text/field <Field /> With additional props Value is a string matches the snapshot 1`] = `
<input
  className="MOCK CLASSNAME"
  disabled={true}
  id="MOCK ID"
  name="MOCK NAME"
  onChange={[Function]}
  placeholder="MOCK PLACEHOLDER"
  readOnly={true}
  required={true}
  type="text"
  value="MOCK VALUE"
/>
`;

exports[`#cogs/cogs/text/field <Field /> With required props matches the snapshot 1`] = `
<input
  className="MOCK CLASSNAME"
  disabled={false}
  name="MOCK NAME"
  onChange={[Function]}
  readOnly={false}
  required={false}
  type="text"
  value=""
/>
`;
